<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:background="@color/gifstudiocreator_900"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin05"
            android:id="@+id/lnvFaceBook"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/icon_fb"/>
            <TextView
                android:fontFamily="@font/aldrich"
                android:layout_width="match_parent"
                android:text="@string/facebook"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:id="@+id/lnvWhatsuo"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/icon_whas"/>
            <TextView
                android:fontFamily="@font/aldrich"
                android:layout_width="match_parent"
                android:text="@string/wa"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/lnvInstagram"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/icon_instagram"/>
            <TextView
                android:fontFamily="@font/aldrich"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:text="@string/ig"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:id="@+id/lnvTwitter"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/icon_twiteer"/>
            <TextView
                android:fontFamily="@font/aldrich"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:text="@string/twitter"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lnvSnapChat"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin10"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/icon_snap_chat"/>
            <TextView
                android:fontFamily="@font/aldrich"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:text="@string/snap_chat"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:id="@+id/lnvLinkedIn"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/icon_gif"/>
            <TextView
                android:fontFamily="@font/aldrich"
                android:layout_width="match_parent"
                android:text="@string/gmail"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/lnvSkype"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/icon_skype"/>
            <TextView
                android:fontFamily="@font/aldrich"
                android:layout_width="match_parent"
                android:text="@string/skype"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:id="@+id/lnvMore"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/more"/>
            <TextView
                android:fontFamily="@font/aldrich"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:text="@string/more"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
