<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_140sdp"
        android:background="@color/gifstudiocreator_A100"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="278dp"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:outlineSpotShadowColor="@color/colorAccent"
                android:src="@drawable/gif_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:shadowColor="@color/gray"
                android:text="@string/slogan"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/lnvCreateGIF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        style="@style/home_image"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/btncreategif" />

                    <TextView
                        style="@style/home_text"
                        android:text="@string/creategif" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/lnvMyGIF"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        style="@style/home_image"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/btnmygif" />

                    <TextView
                        style="@style/home_text"
                        android:text="@string/mygif" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/lnvSerchGIF"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        style="@style/home_image"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/btnsearch" />

                    <TextView
                        style="@style/home_text"
                        android:text="@string/searchgif" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/lnvSetting"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <ImageView
                        style="@style/home_image"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:src="@drawable/btnsetting" />

                    <TextView
                        style="@style/home_text"
                        android:text="@string/setting" />
                </LinearLayout>


            </LinearLayout>
            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_ads"></com.google.android.gms.ads.AdView>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
